--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
                             <!-- start portfolio item -->
                             <li class="grid-item grid-item-double web photography wow animate__fadeInUp" data-wow-delay="0.4s">
-                                <a href="single-project-page-07.html">
+                                <a href="meny.html">
                                     <figure>
                                         <div class="portfolio-img"><img
                                                 src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641648631/Koduleht/900x445_bite_dounat_l2zk5z.jpg"
@@ -219,7 +219,7 @@
                             
                             <!-- start portfolio item -->
                             <li class="grid-item grid-item-double branding photography wow animate__fadeInUp">
-                                <a href="single-project-page-08.html">
+                                <a href="koolitusmajakas.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641639598/Koduleht/900x900px-_koolitusmajakasLogo1_in8w4d.jpg" alt=""/></div>
                                         <figcaption>
@@ -236,7 +236,7 @@
                             </li>
                             <!-- end portfolio item -->                                
                             <li class="grid-item wow animate__fadeInUp web design" data-wow-delay="0.2s">
-                                <a href="single-project-page-10.html">
+                                <a href="piktogrammid.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641642437/Koduleht/pictogrammid_mockup_mueceb.jpg" alt=""/></div>
                                         <figcaption>
@@ -254,7 +254,7 @@
                             <!-- end portfolio item -->
                             <!-- start  portfolio item -->
                             <li class="grid-item wow animate__fadeInUp branding advertising" data-wow-delay="0.4s">
-                                <a href="single-project-page-09.html">
+                                <a href="kalender.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641645404/Koduleht/900x900px_kalender_mockup_xoklxz.jpg" alt=""/></div>
                                         <figcaption>
@@ -272,7 +272,7 @@
                             <!-- end portfolio item -->
                             <!-- start portfolio item -->
                             <li class="grid-item grid-item-double web photography wow animate__fadeInUp">
-                                <a href="single-project-page-02.html">
+                                <a href="spordibanner.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641552779/Koduleht/sport_banner_mockup_900x445_ek5yqe.jpg" alt=""/></div>
                                         <figcaption>
