--- a/spordibanner.html
+++ b/spordibanner.html
@@ -63,14 +63,14 @@
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
                         <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Branding &nbsp;&nbsp; • &nbsp;&nbsp; Design &nbsp;&nbsp; • &nbsp;&nbsp; Web</span>
-                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Koolitusmajakas</h1>
+                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Bänner seinale</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages.</p>
+                        <p> Kujudasin bänneri, mille sõnum oli väga inspireeriv ja jõuline. Sõnumi ilmestamiseks joonistasin ameerika jalgpallurid liikumises, mis sümboliseeris tugevust, kiirust, eesmärgipärasust, nutikust ja visadust. Teksti ja illustratsioonide sidumiseks kasutasin kahte aktsentvärvi, mida kasutasin ka jalgpallurite illustreerimisel.</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Client:</label>Kuressare Ametikool</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Client:</label>Liikva Päikesekodu</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Industry:</label>Adventure  /  Travel</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Services:</label>Design, Art Direction, Website</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Date:</label>January 16th, 2017</li>
@@ -86,13 +86,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641639527/Koduleht/900x445px-_koolitusmajakasLogo2_yeqpbk.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641665492/Koduleht/kellajad_piktokrammid_brk8ix.jpg" class="w-100" alt=""/>
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641662179/Koduleht/original-_koolitusmajakasLogo_on_Black_Paper_qllkfa.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641665492/Koduleht/tegevuse2_piktokrammid_tkt43c.jpg" class="w-100" alt=""/>
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641662445/Koduleht/kooltusmajaka_logod_xld9ew.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641665492/Koduleht/tegevused_piktokrammid_zhjaw9.jpg" class="w-100" alt=""/>
                     </div>
                    
                 </div>
@@ -236,9 +236,9 @@
                     <div class="w-45 text-start">
                         <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Previous Project</span>
-                            <a href="single-project-page-06.html">
+                            <a href="single-project-page-08.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
-                                Bite Dounuts Menu
+                                Kustikalender
                             </a>
                         </div>
                     </div>
@@ -248,9 +248,9 @@
                     <div class="w-45 text-end">
                         <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Next Project</span>
-                            <a href="single-project-page-07.html">
+                            <a href="single-project-page-10.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
-                                Kustikalender
+                                Sporti
                             </a>
                         </div>
                     </div>
