--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <img alt="" src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641635896/Koduleht/portree-02_xqjfbd.jpg">
                     </div>
                     <div class="col-12 col-md-9 d-flex flex-column align-items-center justify-content-center one-third-screen lg-h-350px md-h-500px sm-h-auto text-center sm-h-auto">
-                        <div class="font-weight-300 alt-font title-large text-extra-dark-gray d-inline-block align-bottom mx-auto"><span class="font-weight-600 text-bold-underline position-relative">Portfoolio</span></div>
+                        <div class="font-weight-300 alt-font title-large text-extra-dark-gray d-inline-block align-bottom mx-auto">Oliveri <span class="font-weight-600 text-bold-underline position-relative">Portfoolio</span></div>
                         <div class="text-medium-gray text-large text-uppercase margin-40px-top letter-spacing-2 alt-font sm-margin-10px-top">OLIVER JUSS</div>
                     </div>
                 </div>
@@ -71,12 +71,12 @@
                     <div class="col-12">
                         <!-- start filter navigation -->
                         <ul class="portfolio-filter nav nav-tabs justify-content-center border-0 portfolio-filter-tab-1 font-weight-600 alt-font text-uppercase text-center margin-80px-bottom text-small md-margin-40px-bottom sm-margin-20px-bottom">
-                            <li class="nav active"><a href="javascript:void(0);" data-filter="*" class="light-gray-text-link text-very-small">All</a></li>
-                            <li class="nav"><a href="javascript:void(0);" data-filter=".web" class="light-gray-text-link text-very-small">Web</a></li>
-                            <li class="nav"><a href="javascript:void(0);" data-filter=".advertising" class="light-gray-text-link text-very-small">Advertising</a></li>
-                            <li class="nav"><a href="javascript:void(0);" data-filter=".branding" class="light-gray-text-link text-very-small">Branding</a></li>
-                            <li class="nav"><a href="javascript:void(0);" data-filter=".design" class="light-gray-text-link text-very-small">Design</a></li>
-                            <li class="nav"><a href="javascript:void(0);" data-filter=".photography" class="light-gray-text-link text-very-small">Photography</a></li>
+                            <li class="nav active"><a href="javascript:void(0);" data-filter="*" class="light-gray-text-link text-very-small">Kõik</a></li>
+                            <li class="nav"><a href="javascript:void(0);" data-filter=".veebileht" class="light-gray-text-link text-very-small">Veebileht</a></li>
+                            <li class="nav"><a href="javascript:void(0);" data-filter=".reklaam" class="light-gray-text-link text-very-small">Reklaam</a></li>
+                            <li class="nav"><a href="javascript:void(0);" data-filter=".logo" class="light-gray-text-link text-very-small">Logo</a></li>
+                            <li class="nav"><a href="javascript:void(0);" data-filter=".desain" class="light-gray-text-link text-very-small">Disain</a></li>
+                            <li class="nav"><a href="javascript:void(0);" data-filter=".trükkis" class="light-gray-text-link text-very-small">Trükkis</a></li>
                         </ul>                                                                           
                         <!-- end filter navigation -->
                     </div>
@@ -163,7 +163,7 @@
                             <li class="grid-item grid-item-double advertising wow animate__fadeInUp" data-wow-delay="0.2s">
                                 <a href="pipewell.html">
                                     <figure>
-                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641632724/Koduleht/900x900px_pipewell_mockup_pedqzi.jpg" alt=""/></div>
+                                        <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641722353/Koduleht/pipewell-tupo_dqvsil.jpg" alt=""/></div>
                                         <figcaption>
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
@@ -279,7 +279,7 @@
                                             <div class="portfolio-hover-main">
                                                 <div class="portfolio-hover-box align-middle"> 
                                                     <div class="portfolio-icon alt-font font-weight-600 icon-medium">+</div>
-                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Crop Identity</span>
+                                                    <span class="text-extra-large alt-font text-extra-dark-gray margin-5px-bottom">Spordibännner</span>
                                                     <p class="no-letter-spacing text-small mb-0 text-medium-gray">Branding and Brochure</p>
                                                 </div>
                                             </div> 
@@ -311,16 +311,15 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 widget sm-margin-30px-bottom">
                     <div
                         class="widget-title alt-font text-extra-small text-extra-dark-gray text-uppercase margin-15px-bottom font-weight-600">
-                        Kontkt info</div>
-                    <div class="text-small line-height-24 w-75 sm-w-100 text-medium-gray">301 The Greenhouse, Custard
-                        Factory, London, E2 8DY.</div>
-                    <div class="text-small line-height-24 text-medium-gray">Email: <a href="mailto:sales@domain.com"
-                            class="text-medium-gray">sales@domain.com</a></div>
-                    <div class="text-small line-height-24 text-medium-gray">Phone: +44 (0) 123 456 7890</div>
+                        Kontaktid</div>
+                    <div class="text-small line-height-24 w-75 sm-w-100 text-medium-gray">Harju maakond ,Türisalu</div>
+                    <div class="text-small line-height-24 text-medium-gray">Email: <a href="mailto:oliverjussdisgin@gmail.com"
+                            class="text-medium-gray">oliverjussdisgin@gmail.com</a></div>
+                    <div class="text-small line-height-24 text-medium-gray">Phone: +372 5668 1811</div>
                 </div>
                 <!-- end contact information -->
                 <!-- start social media -->
-                <div class="col-lg-3 col-md-4 col-sm-6 widget sm-margin-30px-bottom">
+                <!-- <div class="col-lg-3 col-md-4 col-sm-6 widget sm-margin-30px-bottom">
                     <div
                         class="widget-title alt-font text-extra-small text-extra-dark-gray text-uppercase margin-15px-bottom font-weight-600">
                         On social networks</div>
@@ -340,7 +339,7 @@
                         <li class="w-50 float-start"><a href="https://www.instagram.com/" target="_blank"
                                 class="text-medium-gray text-small">Instagram</a></li>
                     </ul>
-                </div>
+                </div> -->
                 <!-- end social media -->
             </div>
         </div>
@@ -349,7 +348,7 @@
         <div class="border-color-extra-light-gray border-top padding-40px-top sm-padding-30px-top">
             <div class="row">
                 <!-- start copyright -->
-                <div class="col-12 text-small text-center text-medium-gray">&COPY; Oliver Juss </div>
+                <div class="col-12 text-small text-center text-medium-gray">&COPY; 2022 Oliver Juss </div>
                 <!-- end copyright -->
             </div>
         </div>
