--- a/konverents_logo.html
+++ b/konverents_logo.html
@@ -62,8 +62,8 @@
             <div class="container padding-two-tb">
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
-                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Branding &nbsp;&nbsp; • &nbsp;&nbsp; Design &nbsp;&nbsp; • &nbsp;&nbsp; Web</span>
-                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Juhtimiskonverents</h1>
+                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Logo &nbsp;&nbsp; • &nbsp;&nbsp; Disain</span>
+                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Juhtimiskonverents 2022</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
                         <p>. Eesti Kvaliteediühing liikmeid ühendab huvi kvaliteedi ja selle juhtimise vastu ning soov muuta maailm kasvõi veidi paremaks paigaks, alustades… iseendast, oma tööst ja ettevõttest/organisatsioonist. Minu ülesanne oli kujundada juhtimiskonverentsi "ANDMED RÄÄGIVAD" tunnuslogo ja reklaambänner. Kliendi soov oli, et kujundusel kasutatakse korraga nii eesti kui ka inglise keelt. Samuti olid olulised märksõnad "andmed räägivad". Minu kujundus sümboliseerib aju, mille sisse on kogutud palju erinevaid andmeid.
@@ -106,7 +106,7 @@
         </section>
         <!-- end gallery section -->
         <!-- start gallery section -->
-        <section class="wow animate__fadeIn bg-light-gray">
+        <!-- <section class="wow animate__fadeIn bg-light-gray">
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
@@ -117,9 +117,9 @@
                     <div class="col-12">
                         <div class="filter-content overflow-hidden">
                             <ul class="hover-option4 lightbox-gallery portfolio-wrapper grid grid-loading grid-3col xl-grid-3col lg-grid-3col md-grid-2col sm-grid-2col xs-grid-1col gutter-large">
-                                <li class="grid-sizer"></li>
+                                <li class="grid-sizer"></li> -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp">
+                                <!-- <li class="grid-item wow animate__fadeInUp">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 01">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -134,10 +134,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.2s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.2s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 02">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -152,10 +152,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 03">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -170,10 +170,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 04">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -188,10 +188,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 05">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -206,10 +206,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 06">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -224,14 +224,14 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
-                            </ul>
+                            <!-- </ul>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- end image gallery section -->
         <!-- start blog navigation bar section -->
         <section class="wow animate__fadeIn border-top border-color-medium-gray p-0">
@@ -241,8 +241,8 @@
                 <div class="row justify-content-between align-items-center g-0 padding-30px-lr md-padding-15px-lr">
                     <div class="w-45 text-start">
                         <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
-                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Previous Project</span>
-                            <a href="single-project-page-08.html">
+                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
+                            <a href="ajakiri.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
                                 Ametikool 100 Ajakiri
                             </a>
@@ -253,10 +253,10 @@
                     </div>
                     <div class="w-45 text-end">
                         <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
-                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Next Project</span>
-                            <a href="single-project-page-01.html">
+                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
+                            <a href="konverents_logo.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
-                                Mammut Adventure
+                                Juhtimiskonverents
                             </a>
                         </div>
                     </div>
