--- a/koolitusmajakas.html
+++ b/koolitusmajakas.html
@@ -62,7 +62,7 @@
             <div class="container padding-two-tb">
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
-                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Branding &nbsp;&nbsp; • &nbsp;&nbsp; Design &nbsp;&nbsp; • &nbsp;&nbsp; Web</span>
+                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Logo &nbsp;&nbsp; • &nbsp;&nbsp; Disain 
                         <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Koolitusmajakale logo</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
@@ -70,11 +70,11 @@
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Client:</label>Kuressare Ametikool</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Industry:</label>Adventure  /  Travel</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Services:</label>Design, Art Direction, Website</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Date:</label>January 16th, 2017</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Website:</label><a href="#">www.spiceblends.com</a></li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Kuressare Ametikool</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Madis Vaher</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Koolitusmajakale oli vaja teha logo</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>Jaanuar 2021</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li>
                         </ul>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                         <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641662179/Koduleht/original-_koolitusmajakasLogo_on_Black_Paper_qllkfa.jpg" class="w-100" alt=""/>
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641662445/Koduleht/kooltusmajaka_logod_xld9ew.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641731151/Koduleht/Koolitusmajaka_logod_xs8umi.jpg" class="w-100" alt=""/>
                     </div>
                    
                 </div>
@@ -100,7 +100,7 @@
         </section>
         <!-- end gallery section -->
         <!-- start gallery section -->
-        <section class="wow animate__fadeIn bg-light-gray">
+        <!-- <section class="wow animate__fadeIn bg-light-gray">
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
@@ -111,9 +111,9 @@
                     <div class="col-12">
                         <div class="filter-content overflow-hidden">
                             <ul class="hover-option4 lightbox-gallery portfolio-wrapper grid grid-loading grid-3col xl-grid-3col lg-grid-3col md-grid-2col sm-grid-2col xs-grid-1col gutter-large">
-                                <li class="grid-sizer"></li>
+                                <li class="grid-sizer"></li> -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp">
+                                <!-- <li class="grid-item wow animate__fadeInUp">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 01">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -128,10 +128,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.2s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.2s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 02">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -146,10 +146,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 03">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -164,10 +164,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 04">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -182,10 +182,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 05">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -200,10 +200,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 06">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -218,14 +218,14 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
-                            </ul>
+                            <!-- </ul>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- end image gallery section -->
         <!-- start blog navigation bar section -->
         <section class="wow animate__fadeIn border-top border-color-medium-gray p-0">
@@ -235,10 +235,10 @@
                 <div class="row justify-content-between align-items-center g-0 padding-30px-lr md-padding-15px-lr">
                     <div class="w-45 text-start">
                         <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
-                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Previous Project</span>
-                            <a href="single-project-page-06.html">
+                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
+                            <a href="meny.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
-                                Bite Dounuts Menu
+                                Menu
                             </a>
                         </div>
                     </div>
@@ -247,8 +247,8 @@
                     </div>
                     <div class="w-45 text-end">
                         <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
-                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Next Project</span>
-                            <a href="single-project-page-07.html">
+                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
+                            <a href="kalender.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
                                 Kustikalender
                             </a>
