--- a/pipewell.html
+++ b/pipewell.html
@@ -62,20 +62,19 @@
             <div class="container padding-two-tb">
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
-                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Branding &nbsp;&nbsp; • &nbsp;&nbsp; Design &nbsp;&nbsp; • &nbsp;&nbsp; Web</span>
+                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Logo &nbsp;&nbsp; • &nbsp;&nbsp; Disain &nbsp;&nbsp; • &nbsp;&nbsp; Trükkis</span>
                         <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Pipewell</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
                         <p>Minu ülesanne oli luua ettevõttele Pipewell OÜ visuaalne identiteet. Ettevõte tegeleb vee, kanalisatsiooni, kütte ja ventilatsiooni seadmete paigalduse ja hooldusega. Kliendi sooviks oli kasutada siniseid toone. Samuti soovis klient, et logo oleks kuvatud sõnaliselt ja tähed võiksid meenutada torusid.</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
-                        <ul class="list-style-6 margin-twelve-left">
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Client:</label>Pipewell</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Industry:</label>Adventure  /  Travel</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Services:</label>Design, Art Direction, Website</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Date:</label>January 16th, 2017</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Website:</label><a href="#">www.spiceblends.com</a></li>
-                        </ul>
+                    <ul class="list-style-6 margin-twelve-left">
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Veljo Kuusk</li>
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">iseseisev töö:</label></li>
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>luua ettevõttele Pipewell OÜ CVI</li>
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>Detsember 2020</li>
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li>
                     </div>
                 </div>
             </div>
@@ -89,18 +88,18 @@
                         <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641659205/Koduleht/Pipewell_logo_elzffk.jpg" class="w-100" alt=""/>
                     </div>
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
-                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641660286/Koduleht/pipewell_visitkaart_esiJPG_zry3ta.jpg" class="w-100" alt=""/>
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641724142/Koduleht/Pipewell_visitkaatid_mockup_yxkc7o.jpg" class="w-100" alt=""/>
                     </div>
-                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                    <!-- <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
                         <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641660287/Koduleht/pipewell_visitkaart_taga_cvd0cm.jpg" class="w-100" alt=""/>
-                    </div>
+                    </div> -->
                    
                 </div>
             </div>
         </section>
         <!-- end gallery section -->
         <!-- start gallery section -->
-        <section class="wow animate__fadeIn bg-light-gray">
+        <!-- <section class="wow animate__fadeIn bg-light-gray">
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
@@ -111,9 +110,9 @@
                     <div class="col-12">
                         <div class="filter-content overflow-hidden">
                             <ul class="hover-option4 lightbox-gallery portfolio-wrapper grid grid-loading grid-3col xl-grid-3col lg-grid-3col md-grid-2col sm-grid-2col xs-grid-1col gutter-large">
-                                <li class="grid-sizer"></li>
+                                <li class="grid-sizer"></li> -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp">
+                                <!-- <li class="grid-item wow animate__fadeInUp">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 01">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -128,10 +127,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.2s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.2s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 02">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -146,10 +145,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 03">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -164,10 +163,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 04">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -182,10 +181,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 05">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -200,10 +199,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 06">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -218,14 +217,14 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
-                            </ul>
+                            <!-- </ul>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- end image gallery section -->
         <!-- start blog navigation bar section -->
         <section class="wow animate__fadeIn border-top border-color-medium-gray p-0">
@@ -236,7 +235,7 @@
                     <div class="w-45 text-start">
                         <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Previous Project</span>
-                            <a href="single-project-page-05.html">
+                            <a href="van_gogh.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
                                 Van goghi Raamat
                             </a>
@@ -248,7 +247,7 @@
                     <div class="w-45 text-end">
                         <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Next Project</span>
-                            <a href="single-project-page-07.html">
+                            <a href="meny.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
                                 Bite Dount Menu
                             </a>
