--- a/van_gogh.html
+++ b/van_gogh.html
@@ -62,20 +62,20 @@
             <div class="container padding-two-tb">
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
-                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Branding &nbsp;&nbsp; • &nbsp;&nbsp; Design &nbsp;&nbsp; • &nbsp;&nbsp; Web</span>
-                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Van Goghi raamat</h1>
+                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Trükkis &nbsp;&nbsp; • &nbsp;&nbsp; Disain</span>
+                        <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Van Goghi kunstiraamat</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
                         <p> Vincent Willem van Gogh oli hollandi maalikunstnik. Ta oli postimpressionist. Kõik tema teosed valmisid kõigest 10 aasta jooksul. Tema loomingus on palju autoportreesid, maastikumaale, natüürmorte lilledega,portreesid ning maale küpressidest, viljaväljadest ja päevalilledest. Minu ülesanne oli luua Van Goghist "väike kunstiraamat", mis hõlmaks endas meistri silmapaistvamaid teoseid ja olulisi fakte tema eraelust.</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
-                        <ul class="list-style-6 margin-twelve-left">
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Client:</label>Oliver Juss</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Industry:</label>Adventure  /  Travel</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Services:</label>Design, Art Direction, Website</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Date:</label>January 16th, 2017</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Website:</label><a href="#">www.spiceblends.com</a></li>
-                        </ul>
+                    <ul class="list-style-6 margin-twelve-left">
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label></li>
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Reet Truväärt</li>
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>luua Van Goghist "väike kunstiraamat"</li>
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>Aprill 2021</li>
+                        <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li>
+                    </ul>
                     </div>
                 </div>
             </div>
@@ -94,13 +94,17 @@
                     <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
                         <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641655508/Koduleht/van_goghiraamat_ybp3uw.jpg" class="w-100" alt=""/>
                     </div>
+                    <div class="col-12 margin-30px-bottom xs-margin-15px-bottom wow animate__fadeInUp">
+                        <img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641729813/Koduleht/van_goghi_raamat_jkzkpo.jpg"
+                            class="w-100" alt="" />
+                    </div>
                    
                 </div>
             </div>
         </section>
         <!-- end gallery section -->
         <!-- start gallery section -->
-        <section class="wow animate__fadeIn bg-light-gray">
+        <!-- <section class="wow animate__fadeIn bg-light-gray">
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
@@ -111,9 +115,9 @@
                     <div class="col-12">
                         <div class="filter-content overflow-hidden">
                             <ul class="hover-option4 lightbox-gallery portfolio-wrapper grid grid-loading grid-3col xl-grid-3col lg-grid-3col md-grid-2col sm-grid-2col xs-grid-1col gutter-large">
-                                <li class="grid-sizer"></li>
+                                <li class="grid-sizer"></li> -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp">
+                                <!-- <li class="grid-item wow animate__fadeInUp">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 01">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -128,10 +132,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.2s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.2s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 02">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -146,10 +150,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 03">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -164,10 +168,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 04">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -182,10 +186,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 05">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -200,10 +204,10 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
                                 <!-- start portfolio item -->
-                                <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
+                                <!-- <li class="grid-item wow animate__fadeInUp" data-wow-delay="0.4s">
                                     <a href="https://via.placeholder.com/900x900" title="Project Photo 06">
                                         <figure>
                                             <div class="portfolio-img bg-extra-dark-gray"><img src="https://via.placeholder.com/900x900" alt="" class="project-img-gallery"/></div>
@@ -218,14 +222,14 @@
                                             </figcaption>
                                         </figure>
                                     </a>
-                                </li>
+                                </li> -->
                                 <!-- end portfolio item -->
-                            </ul>
+                            <!-- </ul>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- end image gallery section -->
         <!-- start blog navigation bar section -->
         <section class="wow animate__fadeIn border-top border-color-medium-gray p-0">
@@ -235,8 +239,8 @@
                 <div class="row justify-content-between align-items-center g-0 padding-30px-lr md-padding-15px-lr">
                     <div class="w-45 text-start">
                         <div class="blog-nav-link blog-nav-link-prev text-extra-dark-gray">
-                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Previous Project</span>
-                            <a href="single-project-page-03.html">
+                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
+                            <a href="eesti_ekspress.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
                                 Eesti Epressi esikass
                             </a>
@@ -247,8 +251,8 @@
                     </div>
                     <div class="w-45 text-end">
                         <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
-                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Next Project</span>
-                            <a href="single-project-page-05.html">
+                            <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
+                            <a href="pipewell.html">
                                 <i class="ti-arrow-right blog-nav-icon"></i>
                                 Pipewell
                             </a>
