--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <li class="nav"><a href="javascript:void(0);" data-filter=".reklaam" class="light-gray-text-link text-very-small">Reklaam</a></li>
                             <li class="nav"><a href="javascript:void(0);" data-filter=".logo" class="light-gray-text-link text-very-small">Logo</a></li>
                             <li class="nav"><a href="javascript:void(0);" data-filter=".desain" class="light-gray-text-link text-very-small">Disain</a></li>
-                            <li class="nav"><a href="javascript:void(0);" data-filter=".trükkis" class="light-gray-text-link text-very-small">Trükkis</a></li>
+                            <li class="nav"><a href="javascript:void(0);" data-filter=".trükkis" class="light-gray-text-link text-very-small">Trükis</a></li>
                         </ul>                                                                           
                         <!-- end filter navigation -->
                     </div>
