--- a/koolitusmajakas.html
+++ b/koolitusmajakas.html
@@ -66,7 +66,7 @@
                         <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Koolitusmajakale logo</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Kuressaare Ametikooli uuele üksusele - koolitusmajakale oli vaja teha logo. Üksus tegeleb koolitus ja arendustööga.  Samuti pidi uus logo sobima juba kasutus olevate teiste "majakate" logodega. Minu kujundus kujutab endas inimese pead, mille sees on majakas. Majakas olev valgussiht näitab teed uutele ja huvitavatele projektidele ja ideedele.</p>
+                        <p>Kuressaare Ametikooli uuele üksusele - koolitusmajakale oli vaja teha logo. Üksus tegeleb koolitus- ja arendustööga.  Samuti pidi uus logo sobima juba kasutuses olevate teiste "majakate" logodega. Minu kujundus kujutab endast inimese pead, mille sees on majakas. Majakas olev valgussiht näitab teed uutele ja huvitavatele projektidele ja ideedele.</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
