--- a/eesti_ekspress.html
+++ b/eesti_ekspress.html
@@ -62,12 +62,12 @@
             <div class="container padding-two-tb">
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
-                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Logo &nbsp;&nbsp; • &nbsp;&nbsp; Disain &nbsp;&nbsp; • &nbsp;&nbsp; Trükkis</span>
+                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Logo &nbsp;&nbsp; • &nbsp;&nbsp; Disain &nbsp;&nbsp; • &nbsp;&nbsp; Trükis</span>
                         <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Eesti Ekspress esikaas</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>2021 suvel oli mul võimalus veeta enda praktika Liikva Päikesekodus. Liikva Päikesekodu on kodu suure toetusvajadusega autismispektrihäire, intellektipuude ja Downi sündroomiga noortele.
-                        Seal osutatakse igapäevaelu toetamise, päeva- ja nädalahoiuteenuse osutamist 40-le inimesele, vanuses 18-30 eluaastat. Praktikal olles sain võimaluse kujundada Eesti Ekspressi esikaas. Enda kujunsuses lähtusin ettevõtte sümboolikast. Kujunduse tegin rõõmsa ja päikeselise, et vaatajal tekiks soov ja tahtmine tulla oma silmaga Päikesekodu vaatama.</p>
+                        <p>2021 suvel oli mul võimalus veeta ettevõtte praktika Liikva Päikesekodus. Liikva Päikesekodu on kodu suure toetusvajadusega autismispektrihäire, intellektipuude ja Downi sündroomiga noortele.
+                        Seal osutatakse igapäevaelu toetamise, päeva- ja nädalahoiuteenust 40-le inimesele, vanuses 18-30 eluaastat. Praktikal olles sain võimaluse kujundada Eesti Ekspressi esikaas. Enda kujunduses lähtusin ettevõtte sümboolikast. Kujunduse tegin rõõmsa ja päikeselise, et vaatajal tekiks soov ja tahtmine tulla oma silmaga Päikesekodu vaatama.</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                     <ul class="list-style-6 margin-twelve-left">
