--- a/piktogrammid.html
+++ b/piktogrammid.html
@@ -66,7 +66,7 @@
                         <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Alternatiivkommunikatsioon</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p>Liikva Päikesekodu kasutab igapäevatöös külas elavate noortega palju alternatiivkommunikatsiooni. Minu ülesanne oli disainida uusi ning täiendada juba olemasolevaid piktogramme. Piktogrammid tuli teha kontrastsed - ainult must-valged. Samuti pidi iga piktogramm edasi andma mingit konkreetset tegevust, mida päikekodus elavad noored igapäevaselt teevad.</p>
+                        <p>Liikva Päikesekodu kasutab igapäevatöös külas elavate noortega palju alternatiivkommunikatsiooni. Minu ülesanne oli disainida uusi ning täiendada juba olemasolevaid piktogramme. Piktogrammid tuli teha kontrastsed - ainult must-valged. Samuti pidi iga piktogramm edasi andma mingit konkreetset tegevust, mida päikese kodus elavad noored igapäevaselt teevad.</p>
                     </div>
                     <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                         <ul class="list-style-6 margin-twelve-left">
