--- a/spordibanner.html
+++ b/spordibanner.html
@@ -62,11 +62,11 @@
             <div class="container padding-two-tb">
                 <div class="row">
                     <div class="col-12 text-center margin-60px-bottom md-margin-30px-bottom sm-margin-10px-bottom">
-                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Trükkis &nbsp;&nbsp; • &nbsp;&nbsp; Disain</span>
+                        <span class="w-60 mx-auto text-outside-line alt-font sm-w-100 sm-padding-15px-lr d-inline">Trükis &nbsp;&nbsp; • &nbsp;&nbsp; Disain</span>
                         <h1 class="text-extra-dark-gray alt-font letter-spacing-minus-1 font-weight-700 d-block margin-10px-top">Bänner seinale</h1>
                     </div>
                     <div class="col-12 col-lg-5 offset-lg-1 line-height-28 last-paragraph-no-margin md-margin-50px-bottom sm-margin-30px-bottom wow animate__fadeInUp">
-                        <p> Kujudasin bänneri, mille sõnum oli väga inspireeriv ja jõuline. Sõnumi ilmestamiseks joonistasin ameerika jalgpallurid liikumises, mis sümboliseeris tugevust, kiirust, eesmärgipärasust, nutikust ja visadust. Teksti ja illustratsioonide sidumiseks kasutasin kahte aktsentvärvi, mida kasutasin ka jalgpallurite illustreerimisel.</p>
+                        <p> Kujudasin bänneri, mille sõnum on väga inspireeriv ja jõuline. Sõnumi ilmestamiseks joonistasin ameerika jalgpallurid liikumises, mis sümboliseerib tugevust, kiirust, eesmärgipärasust, nutikust ja visadust. Teksti ja illustratsioonide sidumiseks kasutasin kahte aktsentvärvi, mida kasutasin ka jalgpallurite illustreerimisel.</p>
                     </div>
                 <div class="col-12 col-lg-4 offset-lg-1 line-height-26 wow animate__fadeInUp">
                     <ul class="list-style-6 margin-twelve-left">
