--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <!-- start filter navigation -->
                         <ul class="portfolio-filter nav nav-tabs justify-content-center border-0 portfolio-filter-tab-1 font-weight-600 alt-font text-uppercase text-center margin-80px-bottom text-small md-margin-40px-bottom sm-margin-20px-bottom">
                             <li class="nav active"><a href="javascript:void(0);" data-filter="*" class="light-gray-text-link text-very-small">Kõik</a></li>
-                            <li class="nav"><a href="javascript:void(0);" data-filter=".veebileht" class="light-gray-text-link text-very-small">Veebileht</a></li>
+                            <li class="nav"><a href="javascript:void(0);" data-filter=".bänner" class="light-gray-text-link text-very-small">Bänner</a></li>
                             <li class="nav"><a href="javascript:void(0);" data-filter=".reklaam" class="light-gray-text-link text-very-small">Reklaam</a></li>
                             <li class="nav"><a href="javascript:void(0);" data-filter=".logo" class="light-gray-text-link text-very-small">Logo</a></li>
                             <li class="nav"><a href="javascript:void(0);" data-filter=".disain" class="light-gray-text-link text-very-small">Disain</a></li>
@@ -106,7 +106,7 @@
                             </li>
                             <!-- end portfolio item -->
                             <!-- start  portfolio item -->
-                            <li class="grid-item wow animate__fadeInUp logo reklaam disain" data-wow-delay="0.2s">
+                            <li class="grid-item wow animate__fadeInUp bänner logo reklaam disain" data-wow-delay="0.2s">
                                 <a href="konverents_logo.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641628948/Koduleht/900x900_arvuti_ja_tefeoni_kaliteediuhingu_mockup_rooqa4.jpg" alt=""/></div>
@@ -271,7 +271,7 @@
                             </li>
                             <!-- end portfolio item -->
                             <!-- start portfolio item -->
-                            <li class="grid-item grid-item-double trükis disain reklaam wow animate__fadeInUp">
+                            <li class="grid-item grid-item-double trükis disain bänner reklaam wow animate__fadeInUp">
                                 <a href="spordibanner.html">
                                     <figure>
                                         <div class="portfolio-img"><img src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641552779/Koduleht/sport_banner_mockup_900x445_ek5yqe.jpg" alt=""/></div>
