--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
                     <div class="col-12 col-md-3 d-flex flex-column align-items-center justify-content-center one-third-screen lg-h-330px md-h-500px sm-h-auto text-center wow  sm-h-auto sm-margin-30px-bottom">
                         <img alt="" src="https://res.cloudinary.com/dxxjplpwo/image/upload/v1641635896/Koduleht/portree-02_xqjfbd.jpg">
                     </div>
-                    <div class="col-12 col-md-9 d-flex flex-column align-items-center justify-content-center one-third-screen lg-h-350px md-h-500px sm-h-auto text-center sm-h-auto">
-                        <div class="font-weight-300 alt-font title-large text-extra-dark-gray d-inline-block align-bottom mx-auto">Oliveri <span class="font-weight-600 text-bold-underline position-relative">Portfoolio</span></div>
-                        <div class="text-medium-gray text-large text-uppercase margin-40px-top letter-spacing-2 alt-font sm-margin-10px-top">KUJUNDUSGRAAFIK</div>
+                    <div class="col-12 col-md-6 d-flex flex-column align-items-center justify-content-center one-third-screen lg-h-350px md-h-500px sm-h-auto text-center sm-h-auto">
+                        <div class="font-weight-300 alt-font title-large text-extra-dark-gray d-inline-block align-bottom mx-auto">‎ <span class="font-weight-600 text-bold-underline position-relative">Portfoolio</span></div>
+                        <div class="text-bold-gray text-large text-uppercase margin-40px-top letter-spacing-2 alt-font sm-margin-10px-top"> OLIVER JUSS  </div>
+                        <div class="text-medium-gray text-small text-uppercase margin-10px-top letter-spacing-2 alt-font sm-margin-10px-top">
+                             KUJUNDUSGRAAFIK</div>
                     </div>
                 </div>
             </div>
