--- a/koolitusmajakas.html
+++ b/koolitusmajakas.html
@@ -72,7 +72,7 @@
                         <ul class="list-style-6 margin-twelve-left">
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Klient:</label>Kuressare Ametikool</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Juhendaja:</label>Madis Vaher</li>
-                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Koolitusmajakale oli vaja teha logo</li>
+                            <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Ülesanne:</label>Logo koolitusmajakale</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Aeg:</label>Jaanuar 2021</li>
                             <li class="margin-5px-bottom"><label class="w-30 d-inline-block">Mockup:</label><a href="#">www.freepik.com</li>
                         </ul>
