--- a/konverents_logo.html
+++ b/konverents_logo.html
@@ -244,13 +244,13 @@
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Eelmine projekt</span>
                             <a href="ajakiri.html">
                                 <i class="ti-arrow-left blog-nav-icon"></i>
-                                Ametikool 100 Ajakiri
+                                Ametikool 100 ajakiri
                             </a>
                         </div>
                     </div>
-                    <div class="w-10 text-center">
+                    <!-- <div class="w-10 text-center">
                         <a href="portfolio-boxed-grid-overlay.html" class="blog-nav-link blog-nav-home"><i class="ti-layout-grid2-alt"></i></a>
-                    </div>
+                    </div> -->
                     <div class="w-45 text-end">
                         <div class="blog-nav-link blog-nav-link-next text-extra-dark-gray">    
                             <span class="text-medium-gray text-extra-small text-uppercase d-none d-md-block">Järgmine projekt</span>
