--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
                         class="widget-title alt-font text-extra-small text-extra-dark-gray text-uppercase margin-40px-bottom margin-10px-top font-weight-600">
                         Kontaktid</div>
                     <div class="text-small line-height-24 w-75 sm-w-100 text-medium-gray">Türisalu, Harjumaa</div>
-                    <div class="text-small line-height-24 text-medium-gray">Email: <a href="mailto:oliverjussdisgin@gmail.com"
-                            class="text-medium-gray">oliverjussdesign@gmail.com</a></div>
+                    <div class="text-small line-height-24 text-medium-gray">Email: <a href="mailto:oliver.juss@ametikool.ee"
+                            class="text-medium-gray">oliver.juss@ametikool.ee</a></div>
                     <div class="text-small line-height-24 text-medium-gray">Phone: +372 5668 1811</div>
                 </div>
                 <!-- end contact information -->
